# ydenoise-fcg20

./: .gitignore  CMakeLists.txt  readme.html  readme.md
apps/: CMakeLists.txt
apps/yimagedenoise/: CMakeLists.txt  yimagedenoise.cpp
libs/yocto/: yocto_image.cpp
libs/yocto_extension/: CMakeLists.txt  yocto_extension.cpp  yocto_extension.h
libs/yocto_extension/ext/denoise/apple/lib/: libOpenImageDenoise.0.dylib  libtbb.dylib  libtbbmalloc.dylib
libs/yocto_extension/ext/denoise/apple/lib/cmake/OpenImageDenoise/: OpenImageDenoiseConfig-release.cmake  OpenImageDenoiseConfig.cmake
libs/yocto_pathtrace/: yocto_pathtrace.cpp
scripts/: generate_images.sh  intel.sh  nlmean.sh  run.cmd  run.sh
tests/: cornellbox.pfm  test_denoised.pfm
